After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684990 - Doesn't accept http://[::]:8080 as URL
Doesn't accept http://[::]:8080 as URL
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
2.40.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2012-09-27 18:01 UTC by Lennart Poettering
Modified: 2012-10-07 22:25 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Lennart Poettering 2012-09-27 18:01:26 UTC
When I try to enter http://[::]:8080 as URL, epiphany doesn't do anything, it doesn't appear to accept that as a valid URL, but doesn't complain either.

(In case this is not clear, this URL is the equivalent of http://127.0.0.1:8080 for IPv6)

epiphany-3.5.92-1.fc18.x86_64
Comment 1 Xan Lopez 2012-10-07 11:42:16 UTC
Do you have adblock enabled? Here it just tries to load it, apparently forever.
Comment 2 Xan Lopez 2012-10-07 11:45:23 UTC
OK, I get this now:

(epiphany:25500): GLib-GIO-WARNING **: Invalid URI 'http://:::8080'

Program received signal SIGTRAP, Trace/breakpoint trap.
0x00007ffff5062e21 in g_logv (log_domain=0x7ffff52f20fc "GLib-GIO", log_level=G_LOG_LEVEL_WARNING, format=0x7ffff52f2234 "Invalid URI '%s'", args=0x7fffffffce18) at gmessages.c:967
967			G_BREAKPOINT ();
Missing separate debuginfos, use: debuginfo-install libxkbfile-1.0.7-2.fc15.x86_64
(gdb) bt
  • #0 g_logv
    at gmessages.c line 967
  • #1 g_log
    at gmessages.c line 1003
  • #2 g_proxy_address_enumerator_set_property
    at gproxyaddressenumerator.c line 667
  • #3 object_set_property
    at gobject.c line 1357
  • #4 g_object_constructor
    at gobject.c line 1868
  • #5 g_object_newv
    at gobject.c line 1718
  • #6 g_object_new_valist
    at gobject.c line 1835
  • #7 g_object_new
    at gobject.c line 1550
  • #8 soup_address_connectable_proxy_enumerate
    at soup-address.c line 1212
  • #9 g_socket_connectable_proxy_enumerate
    at gsocketconnectable.c line 150
  • #10 g_socket_client_connect_async
    at gsocketclient.c line 1621
  • #11 soup_socket_connect_async
    at soup-socket.c line 782
  • #12 connect_async_to_uri
    at soup-connection.c line 581
  • #13 soup_connection_connect_async
    at soup-connection.c line 628
  • #14 process_queue_item
    at soup-session-async.c line 217
  • #15 run_queue
    at soup-session-async.c line 307
  • #16 idle_run_queue
    at soup-session-async.c line 340
  • #17 g_idle_dispatch
    at gmain.c line 4806
  • #18 g_main_dispatch
    at gmain.c line 2715
  • #19 g_main_context_dispatch
    at gmain.c line 3219
  • #20 g_main_context_iterate
    at gmain.c line 3290
  • #21 g_main_context_iteration
    at gmain.c line 3351
  • #22 g_application_run
    at gapplication.c line 1620
  • #23 main
    at ../../src/ephy-main.c line 499

Comment 3 Xan Lopez 2012-10-07 11:46:10 UTC
And then:

(epiphany:25500): GLib-GIO-CRITICAL **: g_proxy_resolver_lookup_async: assertion `uri != NULL' failed

Program received signal SIGTRAP, Trace/breakpoint trap.
0x00007ffff5062e21 in g_logv (log_domain=0x7ffff52eeadf "GLib-GIO", log_level=G_LOG_LEVEL_CRITICAL, format=0x7ffff50e7d6c "%s: assertion `%s' failed", args=0x7fffffffd118) at gmessages.c:967
967			G_BREAKPOINT ();
(gdb) bt
  • #0 g_logv
    at gmessages.c line 967
  • #1 g_log
    at gmessages.c line 1003
  • #2 g_return_if_fail_warning
    at gmessages.c line 1012
  • #3 g_proxy_resolver_lookup_async
    at gproxyresolver.c line 162
  • #4 g_proxy_address_enumerator_next_async
    at gproxyaddressenumerator.c line 549
  • #5 g_socket_address_enumerator_next_async
    at gsocketaddressenumerator.c line 139
  • #6 enumerator_next_async
    at gsocketclient.c line 1355
  • #7 g_socket_client_connect_async
    at gsocketclient.c line 1625
  • #8 soup_socket_connect_async
    at soup-socket.c line 782
  • #9 connect_async_to_uri
    at soup-connection.c line 581
  • #10 soup_connection_connect_async
    at soup-connection.c line 628
  • #11 process_queue_item
    at soup-session-async.c line 217
  • #12 run_queue
    at soup-session-async.c line 307
  • #13 idle_run_queue
    at soup-session-async.c line 340
  • #14 g_idle_dispatch
    at gmain.c line 4806
  • #15 g_main_dispatch
    at gmain.c line 2715
  • #16 g_main_context_dispatch
    at gmain.c line 3219
  • #17 g_main_context_iterate
    at gmain.c line 3290
  • #18 g_main_context_iteration
    at gmain.c line 3351
  • #19 g_application_run
    at gapplication.c line 1620
  • #20 main
    at ../../src/ephy-main.c line 499

Comment 4 Lennart Poettering 2012-10-07 22:02:41 UTC
(In reply to comment #1)
> Do you have adblock enabled? Here it just tries to load it, apparently forever.

I don't think I have adblock enabled, never really configured anything at all. But yeah, this is precisely what I am seeing too: nothing happens at all.
Comment 5 Xan Lopez 2012-10-07 22:07:36 UTC
(In reply to comment #4)
> (In reply to comment #1)
> > Do you have adblock enabled? Here it just tries to load it, apparently forever.
> 
> I don't think I have adblock enabled, never really configured anything at all.
> But yeah, this is precisely what I am seeing too: nothing happens at all.

My question was whether *nothing* happens (blank page, no load) or if a load starts but never finishes (blank page, but you get the spinner in the tab going forever). I get the latter here.
Comment 6 Lennart Poettering 2012-10-07 22:10:16 UTC
Yes, I do get the spinner but nothing loads, even though I actually have something listening on the port, and firefox handles the url just fine.
Comment 7 Xan Lopez 2012-10-07 22:19:50 UTC
So this seems to basically be libsoup dropping the ball with ipv6 here, reassigning to Dan.
Comment 8 Dan Winship 2012-10-07 22:25:17 UTC
oops. fixed in master