SoupAddress: fix handling of IPv6 literals

When generating a URI to pass to GProxyResolver, escape IPv6 literals properly.

https://bugzilla.gnome.org/show_bug.cgi?id=684990